# News-Impact-on-Stock-Prices-

./: LICENSE  Makefile  README.md  get_news_app.py  pyproject.toml  requirements.txt
Project_data/output/: TFIDF.csv  campanies_news.csv  clean_text.csv  final_data.csv  sen_score_data.csv
docs/: mkdocs.yml
docs/docs/: index.md
llms_evaluation/: __init__.py  dataset.py  features.py  plots.py
llms_evaluation/modeling/: predict.py  train.py
models/: web_scraping.py
notebooks/: 0.21.0  1_01-Web_scraping.ipynb  1_02_Stock Price Data Collection.ipynb  2._02_Sentiment_analysis_and_EDA.ipynb  2_01_Text_Preprocessing.ipynb  2_01_Text_Preprocessing_and_sent_analysis.ipynb  3_01_Modeling.ipynb
